force-app/main/default/objects/EdFund_Contact_Type__c/EdFund_Contact_Type__c.object-meta.xml
<CustomObject>
    <label>EdFund Contact Type</label>
    <nameField>
        <label>Contact Type Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EdFund Contact Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>