force-app/main/default/objects/EdFund_Contact_Type__c/fields/Contact_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_Description__c</fullName>
    <label>Contact Type Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>