force-app/main/default/objects/EdFund_Contact_Type__c/fields/Facility_Contact_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Type_Category__c</fullName>
    <label>Facility Contact Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Union</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>