force-app/main/default/objects/EdFund_Contact_Type__c/fields/Receives_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Receives_Newsletter__c</fullName>
    <label>Receives Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>