force-app/main/default/objects/EdFund_Contact_Type__c/recordTypes/Facility_Contact_Type.recordType-meta.xml
<RecordType>
    <fullName>Facility_Contact_Type</fullName>
    <active>true</active>
    <label>Facility Contact Type</label>
</RecordType>