force-app/main/default/objects/EdFund_Contact_Type__c/recordTypes/Partner_Contact_Type.recordType-meta.xml
<RecordType>
    <fullName>Partner_Contact_Type</fullName>
    <active>true</active>
    <label>Partner Contact Type</label>
</RecordType>