force-app/main/default/objects/EdFund_Contact_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Facility_Contact_Type_Category__c</columns>
    <columns>Partner_Contact_Type_Category__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>